--- a/css/illustrations.css
+++ b/css/illustrations.css
@@ -113,7 +113,7 @@ body {
 
 @media (max-width: 760px) {
   .background-color {
-    background-color: #441a2b;
+    background-color: #31131f;
   }
   .nacu, .coffee {
     margin-top: 40vw !important;
