--- a/css/about-me.scss
+++ b/css/about-me.scss
@@ -16,6 +16,10 @@
           position: absolute;
       }
   }
+  .things-me {
+    position: absolute;
+    top: 9%;
+  }
 }   
 
 @media (max-width: 768px) {
@@ -40,8 +44,8 @@
     }
     .words {
       position: relative;
-      margin-left: 3%;
-      margin-top: -290vw;
+      margin-top: -288vw;
+      margin-left: -10% !important;
       .animated-text {
         font-size: 3vw!important;
       }
@@ -52,10 +56,11 @@
       .darker {
         position: relative;
         left: 2.5%;
+        margin-top: 0!important;
         z-index: 110;
       }
       #text {
-        margin-top: 12%!important;
+        margin-top: 10\%!important;
         p {
           font-size: 2.5vw!important;
           line-height: 3vw!important;
@@ -65,7 +70,10 @@
       .vic {
         width: 70vw!important;
         margin-left: 15vw!important;
-        margin-top: 8%;
+        margin-top: 6%;
+      }
+      .things-me {
+        margin-top: -2% !important;
       }
       h4 {
         font-size: 3vw!important;
@@ -74,7 +82,7 @@
     }
     footer {
       position: relative;
-      margin-top: 20%;
+      margin-top: 18%;
       z-index: 200;
     }
 }
@@ -82,13 +90,10 @@
 
 .animated-text {
     position: relative;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin-top: 2.5%;
     z-index: 500;
   }
   .animated-text ul {
-      margin: 0;
-      padding: 0;
       list-style: none;
    }
   .animated-text ul li {
@@ -99,87 +104,38 @@
       font-weight: 800;
       margin-left: 0.3vw;
     }
-  .animated-text.hidden-text ul li {
-    opacity: 0;
-  }
-  .animated-text.hidden-text ul li:nth-child(1) {
-      transform: translate(-200px, -180px);
-    }
-  .animated-text.hidden-text ul li:nth-child(2) {
-      transform: translate(100px, 180px);
-    }
-  .animated-text.hidden-text ul li:nth-child(3) {
-      transform: translate(250px, 50px)
-    }
-  .animated-text.hidden-text ul li:nth-child(4) {
-      transform: translate(-80px, -100px)
-    }
-  .animated-text.hidden-text ul li:nth-child(5) {
-      transform: translate(200px, -180px)
-    }
-  .animated-text.hidden-text ul li:nth-child(6) {
-      transform: translate(10px, -80px)
-    }
-  .animated-text.hidden-text ul li:nth-child(7) {
-      transform: translate(-250px, 70px)
-    }
-  .animated-text.hidden-text ul li:nth-child(8) {
-      transform: translate(-240px, 140px)
-    }
-  .animated-text.hidden-text ul li:nth-child(9) {
-      transform: translate(290px, -100px)
-    }
-  .animated-text.hidden-text ul li:nth-child(10) {
-      transform: translate(60px, -170px)
-    }
-   .animated-text.hidden-text ul li:nth-child(11) {
-      transform: translate(190px, -20px)
-    }
-   .animated-text.hidden-text ul li:nth-child(12) {
-      transform: translate(-200px, -180px)
-    }
+  
   .words {
     .first-word {
-      margin-top: 18vw;
+      margin-top: 19vw;
       font-size: 2vw;
       color: #ebbffa;
-      transition: all 2.5s ease 0s;
-      ul li:first-child {
-          margin-left: 4%;
-        }
+      margin-left: 4%;
+      transition: all 1s ease 1s;
     }
     .second-word {
       font-size: 2vw;
       color: rgb(177, 250, 210);
-      transition: all 1s ease 2s;
-      ul li:first-child {
-          margin-left: 9%;
-          margin-top: 5%;
-        }
+      margin-left: 9%;
+      transition: all 1s ease 1.5s;
     }
     .third-word {
       font-size: 2vw;
       color: #faf9bf;
-      transition: all 2.5s ease 0s;
-      ul li:first-child {
-          margin-left: 14%;
-          margin-top: 0;
-        }
+      margin-left: 14%;
+      transition: all 1s ease 2s;
     }
     .fourth-word {
       font-size: 2vw;
       color: rgb(250, 177, 181);
-      transition: all 1s ease 2s;
-      ul li:first-child {
-          margin-left: 19%;
-          margin-top: 5%;
-        }
+      margin-left: 19%;
+      transition: all 1s ease 2.5s;
     }
   }
 
   .bg-darker {
     position: relative;
-    margin-top: 1%;
+    margin-top: 5%;
     .darker {
       max-width: 95%;
       height: auto;
@@ -202,7 +158,6 @@
         margin: 0 auto;
         font-size: 1.4vw;
         width: 90%;
-        font-family: 'Amiri', serif;
         letter-spacing: 0.2vw;
         line-height: 2vw;
         text-shadow: 2px 2px 10px black;
@@ -213,17 +168,30 @@
   .about-me {
     position: relative;
     z-index: 100;
+    .bg-small {
+      position: relative;
+      .small {
+        float: right;
+        margin-top: 2%;
+        margin-right: 8%;
+        max-width: 48%;
+        height: auto;
+      }
+    }
     .things-me {
-      margin-top: 6.2%;
-      float: right;
-      color: white;
-      margin-right: 10%;
+      right: 13%;
+      color: rgb(226, 209, 192);
       text-align: justify;
+      font-weight: 700;
+      text-shadow: 3px 3px black;
+      text-transform: uppercase;
       .colored {
+        text-shadow: 2px 2px rgb(2, 2, 2);
         margin-top: 1%;
-        color: rgba(253, 224, 224, 0.868);
-        font-family: 'Architects Daughter', cursive;
+        color: rgb(222, 186, 253);
+        font-family: 'Gochi Hand', cursive;
         letter-spacing: 0.1vw;
+        text-transform: initial;
 
       }
       h4 {
@@ -242,7 +210,7 @@
 
   .attribution {
     position: relative;
-    margin-top: 8.5vw;
+    margin-top: 10vw;
   }
   
 
