--- a/css/style.css
+++ b/css/style.css
@@ -124,22 +124,23 @@ body {
   }
   .principal-img .passion-content .border-gray .principal-text {
     margin-top: 4vw;
-    font-family: 'Amiri', serif;
+    font-family: 'Gochi Hand', cursive;
     font-size: 4vw;
+    letter-spacing: 0.5vw;
   }
   .principal-img .passion-content .border-gray .secundar-text {
     color: #cd9aae;
     margin-top: 2vw;
-    font-family: 'Amiri', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 1.6vw;
   }
   .container-fluid .sneak-border {
     margin-top: 3%;
-    border: solid rgba(15, 15, 15, 0.437) 2px;
+    border: solid #020202 2px;
     border-radius: 6px;
     width: 36%;
     height: auto;
-    background-color: rgba(0, 0, 0, 0.215);
+    background-color: rgba(0, 0, 0, 0.361);
   }
   .container-fluid .sneak-border .sneak-title {
     margin: 0 auto;
@@ -169,18 +170,20 @@ body {
   .container-fluid .poem {
     color: rgba(255, 255, 255, 0.979);
     font-size: 1.1vw;
-    letter-spacing: 0.08vw;
+    letter-spacing: 0.1vw;
+    line-height: 1.9vw;
   }
   .container-fluid .proza {
     white-space: break-spaces;
   }
   .container-fluid .proza .proza-title {
     margin-left: 0;
+    text-align: center;
   }
   .container-fluid .proza .proza-text {
-    text-indent: -5%;
     margin: -6vw 6vw;
     margin-bottom: 0;
+    text-align: justify;
   }
 }
 
@@ -268,7 +271,7 @@ body {
     letter-spacing: 1.2vw;
     width: 70%;
     margin: 0 auto;
-    font-family: 'Amiri', serif;
+    font-family: 'Lato', sans-serif;
     font-size: 8vw;
     line-height: 18vw;
   }
@@ -276,7 +279,7 @@ body {
     width: 86%;
     color: #f0ac93;
     margin-bottom: 10%;
-    font-family: 'Amiri', serif;
+    font-family: 'Lato', sans-serif;
     letter-spacing: 0.5vw;
     font-size: 5vw;
   }
@@ -284,15 +287,15 @@ body {
     position: relative;
     margin: 0;
     padding: 0;
-    background-color: #91365c87 !important;
+    background-color: #49263557 !important;
   }
   .container-fluid .sneak-border {
     margin-top: 3%;
-    border: solid rgba(15, 15, 15, 0.437) 2px;
+    border: solid #ffbca1 1px;
     border-radius: 6px;
     width: 60% !important;
     height: auto;
-    background-color: rgba(0, 0, 0, 0.215);
+    background-color: rgba(0, 0, 0, 0.347);
   }
   .container-fluid .sneak-border .sneak-title {
     text-align: center;
@@ -360,7 +363,7 @@ body {
 }
 
 .icons-media .fa:hover {
-  color: #95fdc0;
+  color: #e695fd;
 }
 
 .container-fluid {
@@ -401,7 +404,7 @@ body {
   position: relative;
   margin-top: 6%;
   color: white;
-  font-family: 'Amiri', serif;
+  font-family: 'Lato', sans-serif;
 }
 
 .attribution {
