--- a/css/thoughts.css
+++ b/css/thoughts.css
@@ -25,7 +25,6 @@ body {
   font-family: 'Architects Daughter', cursive;
   width: 36%;
   margin: 0 auto;
-  border-bottom: solid 0.2vw #0a0a0a;
   margin-bottom: 5%;
 }
 
@@ -36,20 +35,23 @@ body {
 }
 
 .background-color .header .page-author {
-  margin-top: 3%;
+  width: 80%;
+  margin: 3% auto;
   color: #fadfc6;
   letter-spacing: 0.3vw;
+  border-bottom: solid 0.1vw #fadfc6;
+  border-top: solid 0.1vw #fadfc6;
+  padding: 1.5%;
 }
 
 .background-color .text {
   position: relative;
-  margin-top: 4%;
   width: 96%;
-  margin: 0 auto;
+  margin: -2% auto;
   color: rgba(251, 223, 203, 0.965);
   letter-spacing: 0.1vw;
   background-color: rgba(0, 0, 0, 0.568);
-  border: solid 3px rgba(182, 145, 110, 0.692);
+  border: solid 0.16vw rgba(182, 145, 110, 0.692);
 }
 
 .background-color .text .page {
@@ -66,9 +68,9 @@ body {
 }
 
 .background-color .text .page p {
+  font-family: 'Lato', sans-serif;
   text-indent: 5%;
-  font-size: 1.3vw;
-  font-family: 'Amiri', serif;
+  font-size: 1.2vw;
 }
 
 .background-color .text .page .insomnie {
@@ -77,17 +79,25 @@ body {
 
 @media (max-width: 768px) {
   body {
-    background-color: #441a2b;
+    background-color: #31131f;
   }
   .header {
     width: 70% !important;
+    padding-top: 8% !important;
   }
   h1 {
     margin-top: 45%;
     font-size: 6vw;
   }
+  .page {
+    padding-top: 14% !important;
+  }
+  .first {
+    padding-top: 8% !important;
+  }
   .page-author {
     font-size: 4.5vw;
+    width: 80% !important;
   }
   h2 {
     font-size: 4vw;
