--- a/css/thoughts.scss
+++ b/css/thoughts.scss
@@ -16,11 +16,10 @@ body {
     position: relative;
     color: white;
     text-align: center;
-    padding-top: 12%;;
+    padding-top: 12%;
     font-family: 'Architects Daughter', cursive;
     width: 36%;
     margin: 0 auto;
-    border-bottom: solid 0.2vw rgb(10, 10, 10);
     margin-bottom: 5%;
     .page-title {
       text-transform: uppercase;
@@ -28,20 +27,23 @@ body {
       font-weight: 700;
     }
     .page-author {
-      margin-top: 3%;
+      width: 80%;
+      margin: 3% auto;
       color: rgb(250, 223, 198);
       letter-spacing: 0.3vw;
+      border-bottom: solid 0.1vw rgb(250, 223, 198);
+      border-top: solid 0.1vw rgb(250, 223, 198);
+      padding: 1.5%;
     }
   }
   .text {
     position: relative;
-    margin-top: 4%;
     width: 96%;
-    margin: 0 auto;
+    margin: -2% auto;
     color: rgba(251, 223, 203, 0.965);
     letter-spacing: 0.1vw;
     background-color: rgba(0, 0, 0, 0.568);
-    border: solid 3px rgba(182, 145, 110, 0.692);
+    border: solid 0.16vw rgba(182, 145, 110, 0.692);
     .page {
       width: 90%;
       margin: 0 auto;
@@ -53,9 +55,10 @@ body {
         color: white;
       }
       p {
+        font-family: 'Lato', sans-serif;
         text-indent: 5%;
-        font-size: 1.3vw;
-        font-family: 'Amiri', serif;
+        font-size: 1.2vw;
+        
       }
       .insomnie {
         text-align: center;
@@ -66,17 +69,25 @@ body {
 
 @media (max-width: 768px) {
   body {
-    background-color: #441a2b;
+    background-color: #31131f;
   }
   .header {
     width: 70%!important;
+    padding-top: 8%!important;
   }
   h1 {
     margin-top: 45%;
     font-size: 6vw;
   }
+  .page {
+    padding-top: 14%!important;
+  }
+  .first {
+    padding-top: 8%!important;
+  }
   .page-author {
     font-size: 4.5vw;
+    width: 80%!important;
   }
   h2 {
     font-size: 4vw;
