--- a/css/about-me.css
+++ b/css/about-me.css
@@ -55,11 +55,11 @@
   .information .darker {
     position: relative;
     left: 2.5%;
-    margin-top: 0 !important;
+    margin-top: -2.5% !important;
     z-index: 110;
   }
   .information #text {
-    margin-top: 10\% !important;
+    margin-top: 12 !important;
   }
   .information #text p {
     font-size: 2.5vw !important;
@@ -75,7 +75,7 @@
     margin-top: -2% !important;
   }
   .information h4 {
-    font-size: 3vw !important;
+    font-size: 2.8vw !important;
     text-align: center;
   }
   footer {
@@ -154,7 +154,7 @@
   left: 0;
   right: 0;
   margin: auto;
-  margin-top: 8%;
+  margin-top: 9%;
   width: 90%;
   height: 100%;
   z-index: 1000;
@@ -165,9 +165,9 @@
   padding: 2%;
   text-indent: 5%;
   margin: 0 auto;
-  font-size: 1.4vw;
+  font-size: 1.2vw;
   width: 90%;
-  letter-spacing: 0.2vw;
+  letter-spacing: 0.1vw;
   line-height: 2vw;
   text-shadow: 2px 2px 10px black;
   font-weight: 500;
@@ -195,15 +195,15 @@
   color: #e2d1c0;
   text-align: justify;
   font-weight: 700;
-  text-shadow: 3px 3px black;
+  text-shadow: 2px 2px black;
   text-transform: uppercase;
 }
 
 .about-me .things-me .colored {
   text-shadow: 2px 2px #020202;
   margin-top: 1%;
-  color: #debafd;
-  font-family: 'Gochi Hand', cursive;
+  color: #e8d1fb;
+  font-family: 'Architects Daughter', cursive;
   letter-spacing: 0.1vw;
   text-transform: initial;
 }
