--- a/css/about-me.scss
+++ b/css/about-me.scss
@@ -56,11 +56,11 @@
       .darker {
         position: relative;
         left: 2.5%;
-        margin-top: 0!important;
+        margin-top: -2.5%!important;
         z-index: 110;
       }
       #text {
-        margin-top: 10\%!important;
+        margin-top: 12!important;
         p {
           font-size: 2.5vw!important;
           line-height: 3vw!important;
@@ -76,7 +76,7 @@
         margin-top: -2% !important;
       }
       h4 {
-        font-size: 3vw!important;
+        font-size: 2.8vw!important;
         text-align: center;
       }
     }
@@ -147,7 +147,7 @@
       left: 0;
       right: 0;
       margin: auto;
-      margin-top: 8%;
+      margin-top: 9%;
       width: 90%;
       height: 100%;
       z-index: 1000;
@@ -156,9 +156,9 @@
         padding: 2%;
         text-indent: 5%;
         margin: 0 auto;
-        font-size: 1.4vw;
+        font-size: 1.2vw;
         width: 90%;
-        letter-spacing: 0.2vw;
+        letter-spacing: 0.1vw;
         line-height: 2vw;
         text-shadow: 2px 2px 10px black;
         font-weight: 500;
@@ -183,13 +183,13 @@
       color: rgb(226, 209, 192);
       text-align: justify;
       font-weight: 700;
-      text-shadow: 3px 3px black;
+      text-shadow: 2px 2px black;
       text-transform: uppercase;
       .colored {
         text-shadow: 2px 2px rgb(2, 2, 2);
         margin-top: 1%;
-        color: rgb(222, 186, 253);
-        font-family: 'Gochi Hand', cursive;
+        color: rgb(232, 209, 251);
+        font-family:  'Architects Daughter', cursive;
         letter-spacing: 0.1vw;
         text-transform: initial;
 
